--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,10 @@ h1.h1OverImg {
 
 h1.h1OverImgLarge {
     top: 40%;
-    width: auto !important;
+    font-size: 3.0rem;
+    left: 0;
+    width: 80% !important;
+    background: none;
 }
 
 @media (min-width: 1001px) and (max-width: 1400px) {
@@ -309,12 +312,18 @@ h1.h1OverImgLarge {
         width: 37%;
         text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
     }
+    h1.h1OverImgLarge {
+        font-size: 2.0rem;
+    }
 }
 
 @media (max-width: 1000px) {
     h1.h1OverImg {
         font-size: 2.5rem;
         text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    }
+    h1.h1OverImgLarge {
+        font-size: 1.2rem;
     }
 }
 
