--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ section p {
     width: 75%;
     text-align: left;
     margin: 0 auto;
-    padding-bottom: 30px;
+    padding: 30px 0;
 }
 
 .button01 {
