--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,11 @@ a.first {
     .menuList .menuListFirstLine:last-of-type {
         margin-bottom: 100px;
     }
+    section h1,
+    section h2,
+    section p {
+        width: 90%;
+    }
 }
 
 
@@ -349,14 +354,14 @@ section h2 {
     width: 75%;
     text-align: center;
     margin: 0 auto;
-    padding: 20px;
+    padding-top: 24px;
 }
 
 section p {
     width: 75%;
     text-align: left;
     margin: 0 auto;
-    padding: 30px 0;
+    padding: 24px 0;
 }
 
 .button01 {
