--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ h1.h1OverImg {
 h1.h1OverImgLarge {
     top: 40%;
     font-size: 3.0rem;
-    left: 0;
+    margin: 0 auto;
     width: 80% !important;
     background: none;
 }
