--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,14 @@ strong {
     font-weight: 600;
 }
 
+h1 {
+    font-size: 2.0rem;
+}
+
+h2 {
+    font-size: 1.4rem;
+}
+
 
 /* === Navigation === */
 
