change background img

--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,7 @@ a.first {
 
 .headerBig {
     height: 90vh;
-    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/Image01.jpg);
+    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/DSC00951.JPG);
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -296,7 +296,7 @@ a.first {
 
 .headerLarge {
     height: 50vh;
-    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/Image01.jpg);
+    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/DSC00951.JPG);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
