add imgtextsection links styles

--- a/css/style.css
+++ b/css/style.css
@@ -502,3 +502,8 @@ section p {
 .imgTextSection:hover {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
+
+.linkImgTextSection a {
+    text-decoration: none;
+    color: #000000;
+}
