chcange button section color

--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ section p {
     width: 100%;
     justify-content: space-around;
     color: #FFFFFF;
-    background-color: rgb(142, 47, 47);
+    background-color: #3e3d42;
 }
 
 .divBtn {
