--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ a.first {
 
 .headerBig {
     height: 90vh;
-    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/DSC00951.JPG);
+    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/tlo01.jpg);
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -229,14 +229,19 @@ a.first {
 h1.h1OverImg {
     font-family: 'Oswald', sans-serif;
     position: absolute;
-    text-transform: uppercase;
-    font-size: 4.0rem;
-    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
-    background-color: rgba(160, 160, 160, 0.25);
-    top: 50%;
+    font-size: 3.5rem;
+    font-weight: 300;
+    color: #FFFFFF;
+    top: 55%;
     left: 5%;
-    width: 30%;
+    width: 40%;
     transform: translate(10%, -50%);
+}
+
+h1.h1OverImg span {
+    background-color: #a01916;
+    box-shadow: 0.5em 0 0 #a01916, -0.5em 0 0 #a01916;
+    line-height: 160%;
 }
 
 h1.h1OverImgLarge {
@@ -435,7 +440,7 @@ section p {
 
 @media (min-width: 1001px) and (max-width: 1400px) {
     h1.h1OverImg {
-        font-size: 3.4rem;
+        font-size: 2.5rem;
         width: 37%;
     }
     h1.h1OverImgLarge {
@@ -528,7 +533,8 @@ section p {
         text-align: center;
     }
     h1.h1OverImg {
-        font-size: 2.5rem;
+        font-size: 1.8rem;
+        width: 60%;
     }
     h1.h1OverImgLarge {
         font-size: 1.2rem;
