--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,9 @@ section p {
     h1.h1OverImgLarge {
         font-size: 2.0rem;
     }
+    .divBtn {
+        font-size: 1.2rem;
+    }
 }
 
 @media (max-width: 1100px) {
