--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,38 @@ h2 {
     padding-bottom: 0;
 }
 
+.h1left {
+    text-align: left;
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.h1right {
+    text-align: right;
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.h1left::after {
+    content: '';
+    display: block;
+    border: 2px solid #a01916;
+    width: 100px;
+    margin-top: 10px;
+    left: 0;
+    position: absolute;
+}
+
+.h1right::after {
+    content: '';
+    display: block;
+    border: 2px solid #a01916;
+    width: 100px;
+    margin-top: 10px;
+    right: 0;
+    position: absolute;
+}
+
 
 /* === Navigation === */
 
