--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ footer {
 
 .footerFlexSection {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     background-color: #3e3d42;
 }
 
