--- a/css/style.css
+++ b/css/style.css
@@ -352,11 +352,15 @@ section h2 {
     padding-top: 24px;
 }
 
+section {
+    padding: 12px 0;
+}
+
 section p {
     width: 75%;
     text-align: left;
     margin: 0 auto;
-    padding: 24px 0;
+    padding: 12px;
 }
 
 .button01 {
