correct img url on headerlarge

--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ a.first {
 }
 
 .headerLarge08 {
-    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/DSC00951.JPG);
+    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/tlo09.jpg);
 }
 
 .headerLarge01,
