--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,8 @@ img {
 
 /* === HISTORY === */
 
-#historia_firmy {
+#historia_firmy,
+#nagrody_certyfikaty {
     background: linear-gradient( rgba(199, 199, 199, 0.5) 100%, rgba(199, 199, 199, 0.5)100%), url("https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/tlo01.jpg");
     background-position: center top;
     background-repeat: no-repeat;
@@ -718,6 +719,44 @@ img {
     margin-top: 10px;
     left: 0;
     position: absolute;
+}
+
+
+/* === PRIZES === */
+
+.prizeitem {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #fcfafb;
+}
+
+.prizeLabels {
+    display: flex;
+    flex-wrap: wrap;
+    width: 75%;
+    margin: 40px auto;
+}
+
+.prizeLabels>div {
+    flex-direction: column;
+    flex-basis: 30%;
+    margin: 1%;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    margin-bottom: 10px;
+    border: 2px solid #a01916;
+}
+
+.prizeLabels_Text p {
+    width: 100%;
+    text-align: center;
+    font-weight: 400;
+}
+
+.prizeLabels .prizecontainerLabels_Img {
+    border-top: 1px solid #a01916;
+    padding-top: 20px;
 }
 
 
@@ -857,6 +896,12 @@ img {
     }
     .peopleLabels>div {
         flex-basis: 45%;
+    }
+}
+
+@media (max-width: 800px) {
+    .prizeLabels>div {
+        flex-basis: 100%;
     }
 }
 
