add break point to history section

--- a/css/style.css
+++ b/css/style.css
@@ -897,6 +897,9 @@ img {
     .peopleLabels>div {
         flex-basis: 45%;
     }
+    .historySection {
+        width: 100%;
+    }
 }
 
 @media (max-width: 800px) {
