add headerlarge 00 height and background css

--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,7 @@ a.first {
     background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/tlo09.jpg);
 }
 
+.headerLarge00,
 .headerLarge01,
 .headerLarge02,
 .headerLarge03,
