--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ h2 {
     margin-top: 10px;
     left: 0;
     position: absolute;
+    padding: 0;
 }
 
 .h1right::after {
@@ -66,6 +67,7 @@ h2 {
     margin-top: 10px;
     right: 0;
     position: absolute;
+    padding: 0;
 }
 
 
