--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Helvetica Now Display';
+    src: url('../fonts/HelveticaNowDisplay-Medium.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -313,7 +320,7 @@ a.first {
 }
 
 h1.h1OverImg {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Helvetica Now Display', sans-serif;
     position: absolute;
     font-size: 3.5rem;
     font-weight: 300;
@@ -326,11 +333,11 @@ h1.h1OverImg {
 
 h1.h1OverImg span {
     background-color: #a01916;
-    line-height: 160%;
+    line-height: 130%;
 }
 
 h1.h1OverImgLarge {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Helvetica Now Display', sans-serif;
     position: absolute;
     font-weight: 300;
     color: #FFFFFF;
@@ -346,7 +353,7 @@ h1.h1OverImgLarge {
 h1.h1OverImgLarge span {
     background-color: #a01916;
     box-shadow: 0.5em 0 0 #a01916, -0.5em 0 0 #a01916;
-    line-height: 160%;
+    line-height: 130%;
 }
 
 .whiteSection {
