--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,8 @@ h1.h1OverImg {
 
 h1.h1OverImg span {
     background-color: #a01916;
-    line-height: 120%;
+    line-height: 140%;
+    padding: 5px;
 }
 
 h1.h1OverImgLarge {
@@ -353,7 +354,8 @@ h1.h1OverImgLarge {
 h1.h1OverImgLarge span {
     background-color: #a01916;
     box-shadow: 0.5em 0 0 #a01916, -0.5em 0 0 #a01916;
-    line-height: 120%;
+    line-height: 140%;
+    padding: 5px;
 }
 
 .whiteSection {
