fix headr large img links

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ a.first {
 }
 
 .headerLarge10 {
-    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/tlo11.jpg);
+    background: url(https://raw.githubusercontent.com/goldipl/Railway_Website_new/master/img/tlo11.png);
 }
 
 .headerLarge00,
