--- a/css/style.css
+++ b/css/style.css
@@ -824,6 +824,7 @@ img {
 .prizeLabels .prizecontainerLabels_Img {
     border-top: 1px solid #a01916;
     padding-top: 20px;
+    margin-top: auto;
 }
 
 
